tag title added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <title>Synonym Finder</title>
 </head>
 <body>
 <h1>Synonym Finder</h1>
