--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <h1>Synonym Finder</h1>
 <!--<form action="var/www/cgi-bin/get_synonyms.py" method="post" id="get_synonyms"> -->
 <form action=" " id="getSynonyms">
-    <label for="s">What word do you want search synonyms for?</label>
-    <input type="text" id="s" name="s" placeholder="Type a word">
+    <label for="w">What word do you want search synonyms for?</label>
+    <input type="text" id="w" name="w" placeholder="Type a word">
     <br>
     <br>
     <label for="nr">How many synonyms would you like to get?</label>
