--- a/wordembeddings_finder.html
+++ b/wordembeddings_finder.html
@@ -83,6 +83,7 @@
 				</div>
 				<h2 id="response_head"></h2>
 				<h3 id="response_body"></h3>
+				<h4 id="vectors.png"></h4>
 			</div>
 			</section>
 
