--- a/wordembeddings_finder.html
+++ b/wordembeddings_finder.html
@@ -83,8 +83,10 @@
 				</div>
 				<h2 id="response_head"></h2>
 				<h3 id="response_body"></h3>
+				<img src="images/vectors.jpg" alt="" />
 			</div>
 			</section>
+	
 
 		<!-- Footer -->
 			<footer id="footer">
